# LebedevSphericalIntegration

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: SphericalIntegration.h  SphericalIntegrator.h
include/LebedevSphericalIntegration/: GridCreator.h  OrderType.h  SpatialFunction.h  SphericalIntegrator.h  SphericalSurfaceIntegrator.h  SubgridInfo.h  SubgridType.h  TestFunctions.h
include/SphericalIntegration/: SpatialFunction.h  SphericalIntegration.h
source/: SphericalIntegration.cpp  SphericalIntegrator.cpp
tests/: AGridCreatorTest.cpp  ASphericalIntegrationTest.cpp  ASphericalIntegratorTest.cpp  ASphericalSurfaceIntegratorTest.cpp  CMakeLists.txt
